--- a/index.html
+++ b/index.html
@@ -5,36 +5,81 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Shawl Elegance</title>
   <style>
+    :root {
+      --brand: #8d6e63;
+      --text: #222;
+      --bg: #fffaf9;
+      --accent: #f5ebe0;
+    }
+
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background-color: #fff;
-      color: #333;
+      background-color: var(--bg);
+      color: var(--text);
+      line-height: 1.6;
     }
 
-    header {
-      background-color: #8d6e63;
-      color: white;
-      padding: 20px 40px;
-      text-align: center;
-    }
-
-    .hero {
-      background-image: url("https://images.unsplash.com/photo-1617611826231-9c5dfd59e5ab");
-      background-size: cover;
-      background-position: center;
-      height: 400px;
+    /* Navigation */
+    nav {
       display: flex;
+      justify-content: space-between;
       align-items: center;
-      justify-content: center;
-      color: white;
-      text-shadow: 2px 2px 4px #000;
-      font-size: 2em;
+      padding: 1.5rem 2rem;
+      background-color: var(--bg);
+      box-shadow: 0 1px 5px rgba(0, 0, 0, 0.05);
+    }
+
+    nav .logo {
+      font-size: 1.4rem;
       font-weight: bold;
+      color: var(--brand);
+    }
+
+    nav .nav-links a {
+      margin-left: 1.5rem;
+      text-decoration: none;
+      color: var(--text);
+      font-weight: 500;
+    }
+
+    nav .nav-links a:hover {
+      color: var(--brand);
+    }
+
+    /* Hero Section */
+    .hero {
+      padding: 5rem 2rem;
+      text-align: center;
+      background: linear-gradient(120deg, #f7e1d7, #f2e9e4);
+    }
+
+    .hero h1 {
+      font-size: 3rem;
+      margin-bottom: 1rem;
+    }
+
+    .hero p {
+      font-size: 1.2rem;
+      margin-bottom: 2rem;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .hero .cta-button {
+      padding: 0.75rem 1.5rem;
+      background-color: var(--brand);
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-size: 1rem;
+      cursor: pointer;
+      text-decoration: none;
     }
 
     .section {
-      padding: 40px 20px;
+      padding: 4rem 2rem;
       text-align: center;
     }
 
@@ -42,35 +87,52 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 20px;
+      gap: 30px;
+      margin-top: 2rem;
     }
 
     .product {
-      width: 250px;
-      border: 1px solid #ddd;
-      border-radius: 8px;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.05);
+      width: 280px;
       overflow: hidden;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      text-align: left;
     }
 
     .product img {
       width: 100%;
-      height: 200px;
+      height: 220px;
       object-fit: cover;
     }
 
+    .product-info {
+      padding: 1rem;
+    }
+
     .product h3 {
-      margin: 10px 0;
+      margin: 0.5rem 0;
+      font-size: 1.2rem;
+    }
+
+    .product p {
+      margin: 0;
+      color: #666;
     }
 
     footer {
-      background-color: #3e2723;
-      color: white;
       text-align: center;
-      padding: 20px;
+      padding: 2rem;
+      background-color: #f0e7e0;
+      font-size: 0.9rem;
+      color: #555;
     }
 
-    @media (max-width: 600px) {
+    @media (max-width: 700px) {
+      .hero h1 {
+        font-size: 2.2rem;
+      }
+
       .products {
         flex-direction: column;
         align-items: center;
@@ -79,45 +141,53 @@
   </style>
 </head>
 <body>
-  <header>
-    <h1>Shawl Elegance</h1>
-    <p>Timeless Designs, Pure Comfort</p>
-  </header>
 
-  <div class="hero">
-    Discover Our New Collection
-  </div>
+  <nav>
+    <div class="logo">Shawl Elegance</div>
+    <div class="nav-links">
+      <a href="#">Home</a>
+      <a href="#">Shop</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
+    </div>
+  </nav>
+
+  <section class="hero">
+    <h1>Wrap Yourself in Luxury</h1>
+    <p>Discover beautifully crafted shawls designed for warmth, elegance, and timeless style. Handmade with love.</p>
+    <a class="cta-button" href="#">Explore Collection</a>
+  </section>
 
   <section class="section">
-    <h2>Our Bestsellers</h2>
+    <h2>Featured Shawls</h2>
     <div class="products">
       <div class="product">
         <img src="https://images.unsplash.com/photo-1562157873-818bc0726c8b" alt="Classic Red Shawl" />
-        <h3>Classic Red Shawl</h3>
-        <p>$49.99</p>
+        <div class="product-info">
+          <h3>Classic Red Shawl</h3>
+          <p>$49.99</p>
+        </div>
       </div>
       <div class="product">
         <img src="https://images.unsplash.com/photo-1608250821215-9525eb21c14d" alt="Winter Wool Shawl" />
-        <h3>Winter Wool Shawl</h3>
-        <p>$59.99</p>
+        <div class="product-info">
+          <h3>Winter Wool Shawl</h3>
+          <p>$59.99</p>
+        </div>
       </div>
       <div class="product">
         <img src="https://images.unsplash.com/photo-1541547261565-1b4a626ee8e0" alt="Silk Blend Shawl" />
-        <h3>Silk Blend Shawl</h3>
-        <p>$69.99</p>
+        <div class="product-info">
+          <h3>Silk Blend Shawl</h3>
+          <p>$69.99</p>
+        </div>
       </div>
     </div>
   </section>
 
-  <section class="section">
-    <h2>Contact Us</h2>
-    <p>Email: info@shawlelegance.com</p>
-    <p>Phone: +61 400 123 456</p>
-    <p>Follow us on Instagram @shawlelegance</p>
-  </section>
-
   <footer>
-    &copy; 2025 Shawl Elegance. All rights reserved.
+    &copy; 2025 Shawl Elegance. All rights reserved. | Contact: info@shawlelegance.com
   </footer>
+
 </body>
 </html>
