--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Shawl Elegance</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+  <meta name="description" content="Premium handmade shawls for warmth and elegance. Discover our collection of luxury wraps.">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <title>Shawl Elegance | Luxury Handmade Shawls</title>
   <style>
     :root {
       --brand: #8d6e63;
@@ -142,41 +144,44 @@
 </head>
 <body>
 
-  <nav>
-    <div class="logo">Shawl Elegance</div>
+  <nav aria-label="Main navigation">
+    <div class="logo" aria-label="Shawl Elegance Home">Shawl Elegance</div>
     <div class="nav-links">
-      <a href="#">Home</a>
-      <a href="#">Shop</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
+      <a href="#" aria-current="page">Home</a>
+      <a href="#shop">Shop</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
     </div>
   </nav>
 
-  <section class="hero">
-    <h1>Wrap Yourself in Luxury</h1>
+  <main>
+    <section class="hero" aria-labelledby="hero-heading">
+    <h1 id="hero-heading">Wrap Yourself in Luxury</h1>
     <p>Discover beautifully crafted shawls designed for warmth, elegance, and timeless style. Handmade with love.</p>
-    <a class="cta-button" href="#">Explore Collection</a>
+    <button type="button" class="cta-button" aria-label="Explore our shawl collection">Explore Collection</button>
   </section>
 
-  <section class="section">
-    <h2>Featured Shawls</h2>
+  </section>
+
+  <section id="shop" class="section" aria-labelledby="featured-heading">
+    <h2 id="featured-heading">Featured Shawls</h2>
     <div class="products">
-      <div class="product">
-        <img src="https://images.unsplash.com/photo-1562157873-818bc0726c8b" alt="Classic Red Shawl" />
+      <article class="product" aria-label="Classic Red Shawl">
+        <img src="https://images.unsplash.com/photo-1562157873-818bc0726c8b" alt="Classic Red Shawl draped over a chair" loading="lazy">
         <div class="product-info">
           <h3>Classic Red Shawl</h3>
           <p>$49.99</p>
         </div>
       </div>
-      <div class="product">
-        <img src="https://images.unsplash.com/photo-1608250821215-9525eb21c14d" alt="Winter Wool Shawl" />
+      <article class="product" aria-label="Winter Wool Shawl">
+        <img src="https://images.unsplash.com/photo-1608250821215-9525eb21c14d" alt="Winter Wool Shawl folded neatly on a table" loading="lazy">
         <div class="product-info">
           <h3>Winter Wool Shawl</h3>
           <p>$59.99</p>
         </div>
       </div>
-      <div class="product">
-        <img src="https://images.unsplash.com/photo-1541547261565-1b4a626ee8e0" alt="Silk Blend Shawl" />
+      <article class="product" aria-label="Silk Blend Shawl">
+        <img src="https://images.unsplash.com/photo-1541547261565-1b4a626ee8e0" alt="Silk Blend Shawl being worn by a model" loading="lazy">
         <div class="product-info">
           <h3>Silk Blend Shawl</h3>
           <p>$69.99</p>
@@ -185,8 +190,13 @@
     </div>
   </section>
 
-  <footer>
-    &copy; 2025 Shawl Elegance. All rights reserved. | Contact: info@shawlelegance.com
+  </main>
+
+  <footer role="contentinfo">
+    <p>&copy; 2025 Shawl Elegance. All rights reserved.</p>
+    <address>
+      Contact: <a href="mailto:info@shawlelegance.com">info@shawlelegance.com</a>
+    </address>
   </footer>
 
 </body>
