--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <meta name="description" content="Premium handmade shawls for warmth and elegance. Discover our collection of luxury wraps.">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <title>Shawl Elegance | Luxury Handmade Shawls</title>
   <style>
     :root {
@@ -123,11 +124,109 @@
     }
 
     footer {
-      text-align: center;
-      padding: 2rem;
+      padding: 3rem 2rem;
       background-color: #f0e7e0;
-      font-size: 0.9rem;
       color: #555;
+    }
+
+    .footer-content {
+      display: flex;
+      justify-content: space-around;
+      flex-wrap: wrap;
+      gap: 2rem;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    .footer-section {
+      flex: 1;
+      min-width: 200px;
+    }
+
+    .footer-section h3 {
+      color: var(--brand);
+      margin-bottom: 1rem;
+      font-size: 1.1rem;
+    }
+
+    .footer-section ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    .footer-section li {
+      margin-bottom: 0.5rem;
+    }
+
+    .footer-section a {
+      color: #555;
+      text-decoration: none;
+    }
+
+    .footer-section a:hover {
+      color: var(--brand);
+    }
+
+    .social-links {
+      display: flex;
+      gap: 1rem;
+      margin: 1rem 0;
+    }
+
+    .social-links a {
+      color: var(--brand);
+      font-size: 1.5rem;
+    }
+
+    .copyright {
+      text-align: center;
+      margin-top: 2rem;
+      padding-top: 1rem;
+      border-top: 1px solid #ddd;
+    }
+
+    /* About Section */
+    .about-section {
+      background-color: var(--accent);
+    }
+
+    .about-content {
+      display: flex;
+      align-items: center;
+      gap: 3rem;
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 0 1rem;
+    }
+
+    .about-text {
+      flex: 1.5;
+      min-width: 300px;
+    }
+
+    .about-image {
+      flex: 1;
+      border-radius: 12px;
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+      max-width: 400px;
+      height: auto;
+      object-fit: cover;
+    }
+
+    /* Product Buttons */
+    .add-to-cart {
+      margin-top: 1rem;
+      padding: 0.5rem 1rem;
+      background-color: var(--brand);
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    .add-to-cart:hover {
+      background-color: #7a5b52;
     }
 
     @media (max-width: 700px) {
@@ -138,6 +237,11 @@
       .products {
         flex-direction: column;
         align-items: center;
+      }
+
+      .about-content {
+        flex-direction: column;
+        gap: 2rem;
       }
     }
   </style>
@@ -163,6 +267,17 @@
 
   </section>
 
+  <section id="about" class="section about-section" aria-labelledby="about-heading">
+    <h2 id="about-heading">Our Story</h2>
+    <div class="about-content">
+      <div class="about-text">
+        <p>Founded in 2010, Shawl Elegance began as a small family workshop dedicated to preserving traditional weaving techniques. Today, we continue that legacy by handcrafting each shawl with the same care and attention to detail.</p>
+        <p>Our artisans use only the finest natural fibers - wool, silk, and cashmere - sourced from ethical suppliers who share our commitment to sustainability.</p>
+      </div>
+      <img src="https://images.unsplash.com/photo-1607082348824-0a96f2a4b9da" alt="Artisan working on a loom" loading="lazy" class="about-image">
+    </div>
+  </section>
+
   <section id="shop" class="section" aria-labelledby="featured-heading">
     <h2 id="featured-heading">Featured Shawls</h2>
     <div class="products">
@@ -171,32 +286,65 @@
         <div class="product-info">
           <h3>Classic Red Shawl</h3>
           <p>$49.99</p>
+          <button class="add-to-cart" aria-label="Add Classic Red Shawl to cart">Add to Cart</button>
         </div>
-      </div>
+      </article>
       <article class="product" aria-label="Winter Wool Shawl">
         <img src="https://images.unsplash.com/photo-1608250821215-9525eb21c14d" alt="Winter Wool Shawl folded neatly on a table" loading="lazy">
         <div class="product-info">
           <h3>Winter Wool Shawl</h3>
           <p>$59.99</p>
+          <button class="add-to-cart" aria-label="Add Winter Wool Shawl to cart">Add to Cart</button>
         </div>
-      </div>
+      </article>
       <article class="product" aria-label="Silk Blend Shawl">
         <img src="https://images.unsplash.com/photo-1541547261565-1b4a626ee8e0" alt="Silk Blend Shawl being worn by a model" loading="lazy">
         <div class="product-info">
           <h3>Silk Blend Shawl</h3>
           <p>$69.99</p>
+          <button class="add-to-cart" aria-label="Add Silk Blend Shawl to cart">Add to Cart</button>
         </div>
-      </div>
+      </article>
     </div>
   </section>
 
   </main>
 
   <footer role="contentinfo">
-    <p>&copy; 2025 Shawl Elegance. All rights reserved.</p>
-    <address>
-      Contact: <a href="mailto:info@shawlelegance.com">info@shawlelegance.com</a>
-    </address>
+    <div class="footer-content">
+      <div class="footer-section">
+        <h3>Quick Links</h3>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#shop">Shop</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h3>Customer Service</h3>
+        <ul>
+          <li><a href="#">Shipping Policy</a></li>
+          <li><a href="#">Returns & Exchanges</a></li>
+          <li><a href="#">Size Guide</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h3>Connect With Us</h3>
+        <div class="social-links">
+          <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+          <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+          <a href="#" aria-label="Pinterest"><i class="fab fa-pinterest"></i></a>
+        </div>
+        <address>
+          <p>123 Shawl Lane<br>Fabricville, CA 90210</p>
+          <p><a href="mailto:info@shawlelegance.com">info@shawlelegance.com</a></p>
+        </address>
+      </div>
+    </div>
+    <div class="copyright">
+      <p>&copy; 2025 Shawl Elegance. All rights reserved.</p>
+    </div>
   </footer>
 
 </body>
